--- a/main/refer.html
+++ b/main/refer.html
@@ -501,24 +501,24 @@
                     <li class="menu-item dtmenuitem">
                         <a href="services/" class="">Services</a>
                         <ol class="sub-menu">
-                            <li class="menu-item purple"><a href="services/echo">Echocardiography</a></li>
-                            <li class="menu-item purple"><a href="services/stressecho">Stress Echocardiography</a></li>
-                            <li class="menu-item purple"><a href="services/holter">Holter Monitoring</a></li>
+                            <li class="menu-item "><a href="services/echo">Echocardiography</a></li>
+                            <li class="menu-item "><a href="services/stressecho">Stress Echocardiography</a></li>
+                            <li class="menu-item "><a href="services/holter">Holter Monitoring</a></li>
                         </ol>
                     </li>
                     <li class="menu-item dtmenuitem">
                         <a href="locations/" class="dtmenuheader ">Locations</a>
                         <ol class="sub-menu">
-                            <li class="menu-item purple"><a href="locations/nmelb">North Melbourne</a></li>
-                            <li class="menu-item purple"><a href="locations/epworth">Epworth Richmond</a></li>
-                            <li class="menu-item purple"><a href="locations/mponds">Moonee Ponds</a></li>
+                            <li class="menu-item "><a href="locations/nmelb">North Melbourne</a></li>
+                            <li class="menu-item "><a href="locations/epworth">Epworth Richmond</a></li>
+                            <li class="menu-item "><a href="locations/mponds">Moonee Ponds</a></li>
                         </ol>
                     </li>
                     <li class="menu-item dtmenuitem">
                         <a href="contact" class="dtmenuheader ">Contact</a>
                         <ol class="sub-menu">
-                            <li class="menu-item purple"><a href="book">Request Appointment</a></li>
-                            <li class="menu-item purple"><a href="contact">General Enquiries</a></li>
+                            <li class="menu-item "><a href="book">Request Appointment</a></li>
+                            <li class="menu-item "><a href="contact">General Enquiries</a></li>
                         </ol>
                     </li>
                     <li class="menu-item dtmenuitem"><a href="refer" class="boldbtn">Refer Online</a></li>
