--- a/main/about.html
+++ b/main/about.html
@@ -358,7 +358,7 @@
             color: black !important;
         }
 
-        .herotitle:after {
+        /*.herotitle:after {
             background-image: url("assets/img/swoosh-white1.svg");
             background-repeat: no-repeat;
             background-size: 100% 100%;
@@ -369,7 +369,7 @@
             position: absolute;
             top: calc(100% - .15em);
             width: calc(100% + .4em);
-        }
+        }*/
 
         @media (max-width: 575.98px) {
             .shrinkcentre {
@@ -408,7 +408,7 @@
             </div>
         </div>
         <div id="ha-header">
-            <nav class="menu ha-header ha-header-shrink" style="background: var(--color-contrast-purple) !important;">
+            <nav class="menu ha-header ha-header-shrink">
                 <ol class="dtmenu text">
                     <li class="menu-item"><a href="/"><img src="assets/img/logomark-final%20white.png" style="max-height: 40px; width: auto"></a></li>
                     <li class="menu-item dtmenuitem"><a href="about" class="white">About</a></li>
@@ -469,11 +469,22 @@
                 </nav>
             </div>
         </div>
-        <div class="scrollContent ha-waypoint" data-animate-down="ha-header-shrink" data-animate-up="ha-header-show" style="background-color: var(--color-bg)">
+        <div class="scrollContent ha-waypoint" data-animate-down="ha-header-shrink" data-animate-up="ha-header-show">
             <div class="heropurple">
-                <!--<img src="assets/img/Layer0.png" style="width: 100vw; height: 100%; z-index: -1; opacity: 0.25">-->
-                <div class="col-12">
-                    <h1 class="textb white herotitle" style="text-align: center; padding-top: 200px">About Us</h1>
+                <div style="width: 100%; height: 100%; position: relative; display: block; overflow: hidden">
+                    <img src="assets/img/logomark-final%20white.png" style="z-index: 1; opacity: 0.25; position: absolute; display: block; margin-left: -100px; width: 700px; overflow: hidden">
+                    <div class="col-12" style="align-content: center; align-items: center; text-align: center; z-index: 3">
+                        <h1 class="textb herotitle" style="text-align: center; padding-top: 200px; z-index: 3">About Us</h1>
+                        <div class="swooshcontainer" style="z-index: 3">
+                            <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 369.734 19.966">
+                                <g id="Layer_2" data-name="Layer 2">
+                                    <g id="Layer_1-2" data-name="Layer 1">
+                                        <path d="M1.722,18.466C.146,13.4,7.3,10.437,12.592,10.01A2634.3,2634.3,0,0,1,368.234,5.443" fill="none" stroke="var(--color-contrast-higher)" stroke-linecap="round" stroke-linejoin="round" stroke-width="3" />
+                                    </g>
+                                </g>
+                            </svg>
+                        </div>
+                    </div>
                 </div>
             </div>
             <div class="container-fluid feature row" style="margin-left: 0 !important; margin-right: 0 !important; padding-left: 0 !important; padding-right: 0 !important;">
