--- a/main/services/index.html
+++ b/main/services/index.html
@@ -491,7 +491,7 @@
                     <div class="col-12" style="align-content: center; align-items: center; text-align: center; z-index: 3">
                         <h1 class="textb herotitle" style="text-align: center; padding-top: 200px; z-index: 3">Our Services</h1>
                         <div class="swooshcontainer2" style="z-index: 3">
-                            <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 357.809 13.618"><g id="Layer_2" data-name="Layer 2"><g id="Layer_1-2" data-name="Layer 1"><path d="M1.5,12.118c51.342-3.748,102.805-7.5,154.252-5.677C222.94,8.817,255,12.639,356.309,1.5" fill="none" stroke="#fff" stroke-linecap="round" stroke-linejoin="round" stroke-width="3"/></g></g></svg>
+                            <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 357.809 13.618"><g id="Layer_2" data-name="Layer 2"><g id="Layer_1-2" data-name="Layer 1"><path d="M1.5,12.118c51.342-3.748,102.805-7.5,154.252-5.677C222.94,8.817,255,12.639,356.309,1.5" fill="none" stroke="var(--color-contrast-higher)" stroke-linecap="round" stroke-linejoin="round" stroke-width="3"/></g></g></svg>
                         </div>
                     </div>
                 </div>
