--- a/main/feedback.html
+++ b/main/feedback.html
@@ -346,7 +346,7 @@
     <link rel="stylesheet" href="assets/css/mcs.css">
     <link rel="stylesheet" href="assets/css/mcs1.css">
     <link rel="stylesheet" href="assets/css/cursor.css">
-    <link rel="stylesheet" href="assets/css/micromodal.css">-
+    <link rel="stylesheet" href="assets/css/micromodal.css">
     <link rel="stylesheet" href="assets/fonts/medel.css">
     <link rel="stylesheet" href="assets/fonts/montserrat.css">
     <link rel="stylesheet" href="assets/fonts/toriga.css">
