--- a/main/services/index.html
+++ b/main/services/index.html
@@ -487,7 +487,7 @@
         <div class="scrollContent ha-waypoint" data-animate-down="ha-header-shrink" data-animate-up="ha-header-show" style="background-color: var(--color-bg)">
             <div class="heropurple">
                 <div style="width: 100%; height: 100%; position: relative; display: block; overflow: hidden">
-                    <img src="../assets/img/logomark-final%20white.png" style="z-index: 1; opacity: 0.25; position: absolute; display: block; margin-left: -100px; width: 700px; overflow: hidden">
+                    <img src="../assets/img/logomark-final%20white.png" style="z-index: 1; opacity: 0.25; position: absolute; display: block; top: 50px; right: -100px; width: 500px; overflow: hidden">
                     <div class="col-12" style="align-content: center; align-items: center; text-align: center; z-index: 3">
                         <h1 class="textb herotitle" style="text-align: center; padding-top: 200px; z-index: 3">Our Services</h1>
                         <div class="swooshcontainer2" style="z-index: 3">
