--- a/main/about.html
+++ b/main/about.html
@@ -475,7 +475,7 @@
                     <img src="assets/img/logomark-final%20white.png" style="z-index: 1; opacity: 0.25; position: absolute; display: block; margin-left: -100px; width: 700px; overflow: hidden">
                     <div class="col-12" style="align-content: center; align-items: center; text-align: center; z-index: 3">
                         <h1 class="textb herotitle" style="text-align: center; padding-top: 200px; z-index: 3">About Us</h1>
-                        <div class="swooshcontainer" style="z-index: 3">
+                        <div class="swooshcontainer1" style="z-index: 3">
                             <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 369.734 19.966">
                                 <g id="Layer_2" data-name="Layer 2">
                                     <g id="Layer_1-2" data-name="Layer 1">
