--- a/main/about.html
+++ b/main/about.html
@@ -410,7 +410,7 @@
         <div id="ha-header">
             <nav class="menu ha-header ha-header-shrink">
                 <ol class="dtmenu text">
-                    <li class="menu-item"><a href="/"><img src="assets/img/logomark-final%20white.png" style="max-height: 40px; width: auto"></a></li>
+                    <li class="menu-item"><a href="/"><img src="assets/img/icon.png" style="max-height: 40px; width: auto"></a></li>
                     <li class="menu-item dtmenuitem"><a href="about" class="">About</a></li>
                     <li class="menu-item dtmenuitem">
                         <a href="services/" class="">Services</a>
