--- a/main/about.html
+++ b/main/about.html
@@ -516,7 +516,7 @@
                                         <small class="feature__label margin-bottom--xs">Our Team</small>
                                         <h2 class="text" data-splitting>Dr F A (Larry) Ponnuthurai</h2>
                                         <p class="textp mt-3">Interventional Cardiologist</p>
-                                        <p class="textp mt-3">Cardiac Imaging (Echo & Cardiac CT) Specialist</p>
+                                        <p class="textp mt-3">Cardiac Imaging (Echo & CT) Specialist</p>
                                     </div>
 
                                     <div class="margin-top--lg">
