--- a/main/locations/index.html
+++ b/main/locations/index.html
@@ -704,6 +704,25 @@
                         "page": "epworth"
                     }
                 },
+                {
+                    "type": "Feature",
+                    "geometry": {
+                        "type": "Point",
+                        "coordinates": [
+                            145.13442,
+                            -37.84222
+                        ]
+                    },
+                    "properties": {
+                        "site": "Blackburn South",
+                        "address": "164 Middleborough Rd",
+                        "suburb": "Blackburn South",
+                        "country": "Australia",
+                        "postcode": "3130",
+                        "state": "VIC",
+                        "page": "blackburnsouth"
+                    }
+                },
             ]
         };
 
