--- a/main/index.html
+++ b/main/index.html
@@ -531,7 +531,7 @@
                             <div class="text-component text">
                                 <small class="feature__label margin-bottom--xs">Our Locations</small>
                                 <h2 class="text" data-splitting>Where We Are.</h2>
-                                <p class="textp">We consult and deliver tests across 3 locations in Melbourne: <a href="locations/epworth" class="textlink">Epworth Richmond</a>, <a href="locations/nmelb" class="textlink">North Melbourne</a> &amp; <a href="locations/mponds" class="textlink">Moonee Ponds</a>.</p>
+                                <p class="textp">We currently deliver our services across 4 locations in Melbourne: <a href="locations/epworth" class="textlink">Epworth Richmond</a>, <a href="locations/nmelb" class="textlink">North Melbourne</a>, <a href="locations/blackburnsouth" class="textlink">Blackburn South</a> &amp; <a href="locations/mponds" class="textlink">Moonee Ponds</a>.</p>
                             </div>
 
                             <div class="margin-top--sm">
