--- a/main/contact.html
+++ b/main/contact.html
@@ -584,6 +584,7 @@
                             <li class="menu-item"><a href="locations/nmelb">North Melbourne</a></li>
                             <li class="menu-item"><a href="locations/epworth">Epworth Richmond</a></li>
                             <li class="menu-item"><a href="locations/mponds">Moonee Ponds</a></li>
+                            <li class="menu-item"><a href="locations/blackburnsouth">Blackburn South</a></li>
                         </ol>
                     </li>
                     <li class="menu-item dtmenuitem">
