--- a/main/locations/epworth.html
+++ b/main/locations/epworth.html
@@ -440,6 +440,7 @@
                             <li class="menu-item"><a href="nmelb">North Melbourne</a></li>
                             <li class="menu-item"><a href="epworth">Epworth Richmond</a></li>
                             <li class="menu-item"><a href="mponds">Moonee Ponds</a></li>
+                            <li class="menu-item"><a href="blackburnsouth">Blackburn South</a></li>
                         </ol>
                     </li>
                     <li class="menu-item dtmenuitem">
