--- a/main/locations/index.html
+++ b/main/locations/index.html
@@ -550,6 +550,7 @@
                                             <div class="main-footer__nav-link"><a href="nmelb">North Melbourne</a></div>
                                             <div class="main-footer__nav-link"><a href="epworth">Epworth Richmond</a></div>
                                             <div class="main-footer__nav-link"><a href="mponds">Moonee Ponds</a></div>
+                                            <div class="main-footer__nav-link"><a href="blackburnsouth">Blackburn South</a></div>
                                         </div>
                                         <div class="main-footer__nav-item">
                                             <h5 class="main-footer__nav-header">Contact</h5>
