--- a/main/refer.html
+++ b/main/refer.html
@@ -1317,6 +1317,7 @@
                                             <div class="main-footer__nav-link"><a href="locations/nmelb">North Melbourne</a></div>
                                             <div class="main-footer__nav-link"><a href="locations/epworth">Epworth Richmond</a></div>
                                             <div class="main-footer__nav-link"><a href="locations/mponds">Moonee Ponds</a></div>
+                                             <div class="main-footer__nav-link"><a href="locations/blackburnsouth">Blackburn South</a></div>
                                         </div>
                                         <div class="main-footer__nav-item">
                                             <h5 class="main-footer__nav-header" data-splitting>Contact</h5>
