--- a/main/locations/blackburnsouth.html
+++ b/main/locations/blackburnsouth.html
@@ -393,7 +393,7 @@
         }
 
     </style>
-    <title>North Melbourne | Melbourne Cardiology Services — Cardiac services with a focus on excellence, integrity &amp; quality.</title>
+    <title>Blackburn South | Melbourne Cardiology Services — Cardiac services with a focus on excellence, integrity &amp; quality.</title>
 </head>
 
 <body onload="mcsloader()" style="cursor: none">
