--- a/main/locations/blackburnsouth.html
+++ b/main/locations/blackburnsouth.html
@@ -489,7 +489,7 @@
                 <div style="width: 100%; height: 100%; position: relative; display: block; overflow: hidden">
                     <img src="../assets/img/logomark-final%20white.png" style="z-index: 1; opacity: 0.25; position: absolute; display: block; top: -100px; right: -100px; width: 600px; overflow: hidden">
                     <div class="col-12" style="align-content: center; align-items: center; text-align: center; z-index: 3">
-                        <h1 class="textb herotitle" style="text-align: center; padding-top: 200px; z-index: 3">North Melbourne</h1>
+                        <h1 class="textb herotitle" style="text-align: center; padding-top: 200px; z-index: 3">Blackburn South</h1>
                         <div class="swooshcontainer1" style="z-index: 3">
                             <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 369.734 19.966">
                                 <g id="Layer_2" data-name="Layer 2">
