--- a/main/locations/blackburnsouth.html
+++ b/main/locations/blackburnsouth.html
@@ -507,12 +507,12 @@
                 <div class="col-10 py-5 text3 container container--adaptive">
                     <div class="" style="text-align: center">
                         <h4 class="textsb">
-                            Suite 3 / Level 1, 33 Flemington Rd, North Melbourne 3051
+                            164 Middleborough Road, Blackburn South, VIC 3130
                             <br><br>
                             Phone: <a href="tel:1800880770" class="textlink">1800 880 770</a>
                         </h4>
                         <p class="textp1 mt-4">
-                            A short walk from the Royal Melbourne Hospital/Flemington Rd #14 tram stop (Routes 58 & 59). We share the suite with Luxe Dental Care.
+                            Blackburn South Medical Centre
                         </p>
                         <p class="textp1 mt-4">
                             Services offered at this location:<br> <a href="../services/echo" class="textlink">Echocardiography</a> <br> <a href="../services/holter" class="textlink">Holter Monitoring</a> 
