--- a/main/index.html
+++ b/main/index.html
@@ -502,7 +502,7 @@
                             <div class="text-component text">
                                 <small class="feature__label margin-bottom--xs">Our Services</small>
                                 <h2 class="text" data-splitting>What We Do.</h2>
-                                <p class="textp">We use some of the latest and most advanced techniques and technologies available to us to ensure our patients receive quality care and treatment. We offer echocardiography, stress echocardiography, 24 hour Holter monitoring & consulation across multiple locations.</p>
+                                <p class="textp">We use some of the latest and most advanced techniques and technologies available to us to ensure our patients receive quality care and treatment. We offer echocardiography, stress echocardiography, 24 hour Holter monitoring & consultations across multiple locations.</p>
                             </div>
 
                             <div class="margin-top--sm">
