--- a/main/locations/index.html
+++ b/main/locations/index.html
@@ -501,7 +501,7 @@
                 <div class="col-10 py-5 text3 container container--adaptive">
                     <div style="text-align: center">
                         <p class="textp1">
-                            We consult and deliver tests across 3 locations in Melbourne: <a href="epworth" class="textsb textlink">Epworth Richmond</a>, <a href="nmelb" class="textsb textlink">North Melbourne</a> &amp; <a href="mponds" class="textsb textlink">Moonee Ponds</a>.
+                            We consult and deliver tests across 4 locations in Melbourne: <a href="epworth" class="textsb textlink">Epworth Richmond</a>, <a href="nmelb" class="textsb textlink">North Melbourne</a>, <a href="mponds" class="textsb textlink">Moonee Ponds</a> &amp; <a href="blackburnsouth" class="textsb textlink">Blackburn South</a>.
                             <br><br>
                             <span class="textsb">Phone (All Locations): <a href="tel:1800880770" class="textlink">1800 880 770</a></span>
                         </p>
