--- a/main/contact.html
+++ b/main/contact.html
@@ -1175,7 +1175,7 @@
 
     </script>
     <script>
-        $("input[title='Phone Number']").on("keyup blur", function(e) {
+        $("input[title='Mobile Number']").on("keyup blur", function(e) {
             var v = $(this).val();
             v = v.replace(/[^\d]/g, '');
             v = v.replace(/(\d{4})(\d{3})(\d{3})/, '$1 $2 $3');
