--- a/main/index.html
+++ b/main/index.html
@@ -398,9 +398,7 @@
                         <a href="locations/" class="dtmenuheader">Locations</a>
                         <ol class="sub-menu">
                             <li class="menu-item"><a href="locations/nmelb">North Melbourne</a></li>
-                            <li class="menu-item"><a href="locations/epworth">Epworth Richmond</a></li>
                             <li class="menu-item"><a href="locations/mponds">Moonee Ponds</a></li>
-                            <li class="menu-item"><a href="locations/blackburnsouth">Blackburn South</a></li>
                         </ol>
                     </li>
                     <li class="menu-item dtmenuitem">
@@ -532,7 +530,7 @@
                             <div class="text-component text">
                                 <small class="feature__label margin-bottom--xs">Our Locations</small>
                                 <h2 class="text" data-splitting>Where We Are.</h2>
-                                <p class="textp">We currently deliver our services across 4 locations in Melbourne: <a href="locations/epworth" class="textlink">Epworth Richmond</a>, <a href="locations/nmelb" class="textlink">North Melbourne</a>, <a href="locations/mponds" class="textlink">Moonee Ponds</a> &amp; <a href="locations/blackburnsouth" class="textlink">Blackburn South</a>.</p>
+                                <p class="textp">We currently deliver our services across 2 locations in Melbourne: <a href="locations/nmelb" class="textlink">North Melbourne</a> and <a href="locations/mponds" class="textlink">Moonee Ponds</a>.</p>
                             </div>
 
                             <div class="margin-top--sm">
@@ -579,9 +577,7 @@
                                 <div class="main-footer__nav-item">
                                     <h5 class="main-footer__nav-header" data-splitting>Locations</h5>
                                     <div class="main-footer__nav-link"><a href="locations/nmelb">North Melbourne</a></div>
-                                    <div class="main-footer__nav-link"><a href="locations/epworth">Epworth Richmond</a></div>
                                     <div class="main-footer__nav-link"><a href="locations/mponds">Moonee Ponds</a></div>
-                                    <div class="main-footer__nav-link"><a href="locations/blackburnsouth">Blackburn South</a></div>
                                 </div>
                                 <div class="main-footer__nav-item">
                                     <h5 class="main-footer__nav-header" data-splitting>Contact</h5>
