--- a/main/locations/index.html
+++ b/main/locations/index.html
@@ -432,9 +432,7 @@
                         <a href="../locations/" class="dtmenuheader">Locations</a>
                         <ol class="sub-menu">
                             <li class="menu-item"><a href="nmelb">North Melbourne</a></li>
-                            <li class="menu-item"><a href="epworth">Epworth Richmond</a></li>
                             <li class="menu-item"><a href="mponds">Moonee Ponds</a></li>
-                            <li class="menu-item"><a href="blackburnsouth">Blackburn South</a></li>
                         </ol>
                     </li>
                     <li class="menu-item dtmenuitem">
@@ -501,7 +499,7 @@
                 <div class="col-10 py-5 text3 container container--adaptive">
                     <div style="text-align: center">
                         <p class="textp1">
-                            We consult and deliver tests across 4 locations in Melbourne: <br><a href="epworth" class="textsb textlink">Epworth Richmond</a>, <a href="nmelb" class="textsb textlink">North Melbourne</a>, <a href="mponds" class="textsb textlink">Moonee Ponds</a> &amp; <a href="blackburnsouth" class="textsb textlink">Blackburn South</a>.
+                            We consult and deliver tests across 2 locations in Melbourne: <br><a href="nmelb" class="textsb textlink">North Melbourne</a> and <a href="mponds" class="textsb textlink">Moonee Ponds</a>.
                             <br><br>
                             <span class="textsb">Phone (All Locations): <a href="tel:1800880770" class="textlink">1800 880 770</a></span>
                         </p>
@@ -548,9 +546,7 @@
                                         <div class="main-footer__nav-item">
                                             <h5 class="main-footer__nav-header">Locations</h5>
                                             <div class="main-footer__nav-link"><a href="nmelb">North Melbourne</a></div>
-                                            <div class="main-footer__nav-link"><a href="epworth">Epworth Richmond</a></div>
                                             <div class="main-footer__nav-link"><a href="mponds">Moonee Ponds</a></div>
-                                            <div class="main-footer__nav-link"><a href="blackburnsouth">Blackburn South</a></div>
                                         </div>
                                         <div class="main-footer__nav-item">
                                             <h5 class="main-footer__nav-header">Contact</h5>
@@ -686,45 +682,7 @@
                         "state": "VIC",
                         "page": "mponds"
                     }
-                },
-                {
-                    "type": "Feature",
-                    "geometry": {
-                        "type": "Point",
-                        "coordinates": [
-                            144.993063,
-                            -37.817688
-                        ]
-                    },
-                    "properties": {
-                        "site": "Epworth",
-                        "address": "Suite 6.4, Level 6, 89 Bridge Rd",
-                        "suburb": "Richmond",
-                        "country": "Australia",
-                        "postcode": "3121",
-                        "state": "VIC",
-                        "page": "epworth"
-                    }
-                },
-                {
-                    "type": "Feature",
-                    "geometry": {
-                        "type": "Point",
-                        "coordinates": [
-                            145.13442,
-                            -37.84222
-                        ]
-                    },
-                    "properties": {
-                        "site": "Blackburn South",
-                        "address": "164 Middleborough Rd",
-                        "suburb": "Blackburn South",
-                        "country": "Australia",
-                        "postcode": "3130",
-                        "state": "VIC",
-                        "page": "blackburnsouth"
-                    }
-                },
+                }
             ]
         };
 
