--- a/main/book.html
+++ b/main/book.html
@@ -576,9 +576,7 @@
                         <a href="locations/" class="dtmenuheader">Locations</a>
                         <ol class="sub-menu">
                             <li class="menu-item"><a href="locations/nmelb">North Melbourne</a></li>
-                            <li class="menu-item"><a href="locations/epworth">Epworth Richmond</a></li>
                             <li class="menu-item"><a href="locations/mponds">Moonee Ponds</a></li>
-                            <li class="menu-item"><a href="locations/blackburnsouth">Blackburn South</a></li>
                         </ol>
                     </li>
                     <li class="menu-item dtmenuitem">
@@ -963,9 +961,7 @@
                                                 <input type="radio" name="location" value="North Melbourne " class="" id="nmelbradio" data-parsley-multiple="loclink" data-parsley-error-message="1 selection is required." />
                                                 <label for="nmelbradio" class="textc">North Melbourne (Echocardiography & Holter Monitoring)</label><br>
                                                 <input type="radio" name="location" value="Moonee Ponds " class="" id="mpondsradio" data-parsley-multiple="loclink" data-parsley-required data-parsley-error-message="Please choose 1" />
-                                                <label for="mpondsradio" class="textc">Moonee Ponds (Stress Echocardiography)</label><br>
-                                                <input type="radio" name="location" value="Richmond " class="" id="richmondradio" data-parsley-multiple="loclink" data-parsley-required data-parsley-error-message="Please choose 1" />
-                                                <label for="richmondradio" class="textc">Richmond (Echocardiography & Holter Monitoring)</label>
+                                                <label for="mpondsradio" class="textc">Moonee Ponds (Stress Echocardiography)</label>
                                             </div>
 
                                             <div class="input-wrapper">
@@ -1029,9 +1025,7 @@
                                         <div class="main-footer__nav-item">
                                             <h5 class="main-footer__nav-header" data-splitting>Locations</h5>
                                             <div class="main-footer__nav-link"><a href="locations/nmelb">North Melbourne</a></div>
-                                            <div class="main-footer__nav-link"><a href="locations/epworth">Epworth Richmond</a></div>
                                             <div class="main-footer__nav-link"><a href="locations/mponds">Moonee Ponds</a></div>
-                                             <div class="main-footer__nav-link"><a href="locations/blackburnsouth">Blackburn South</a></div>
                                         </div>
                                         <div class="main-footer__nav-item">
                                             <h5 class="main-footer__nav-header" data-splitting>Contact</h5>
