--- a/main/locations/epworth.html
+++ b/main/locations/epworth.html
@@ -437,10 +437,8 @@
                     <li class="menu-item dtmenuitem">
                         <a href="../locations/" class="dtmenuheader">Locations</a>
                         <ol class="sub-menu">
-                            <li class="menu-item"><a href="nmelb">North Melbourne</a></li>
                             <li class="menu-item"><a href="epworth">Epworth Richmond</a></li>
                             <li class="menu-item"><a href="mponds">Moonee Ponds</a></li>
-                            <li class="menu-item"><a href="blackburnsouth">Blackburn South</a></li>
                         </ol>
                     </li>
                     <li class="menu-item dtmenuitem">
@@ -515,7 +513,7 @@
                             We are located in the Epworth Consulting Suites, a short walk from the Epworth Hospital #15 tram stop (Routes 48 & 75).
                         </p>
                         <p class="textp1 mt-4">
-                            Services offered at this location:<br> <a href="../services/echo" class="textlink">Echocardiography</a> <br> <a href="../services/holter" class="textlink">Holter Monitoring</a> 
+                            Services offered at this location:<br> Consultation 
                         </p>
                     </div>
                     <div class="container mt-5" style="position: relative; height: 50vh; width: 100%; padding-left: 0 !important">
@@ -553,15 +551,13 @@
                                         </div>
                                         <div class="main-footer__nav-item">
                                             <h5 class="main-footer__nav-header">Locations</h5>
-                                            <div class="main-footer__nav-link"><a href="nmelb">North Melbourne</a></div>
                                             <div class="main-footer__nav-link"><a href="epworth">Epworth Richmond</a></div>
                                             <div class="main-footer__nav-link"><a href="mponds">Moonee Ponds</a></div>
-                                             <div class="main-footer__nav-link"><a href="blackburnsouth">Blackburn South</a></div>
                                         </div>
                                         <div class="main-footer__nav-item">
                                             <h5 class="main-footer__nav-header">Contact</h5>
                                             <div class="main-footer__nav-link"><a href="../contact">General Enquiries</a></div>
-                                            <div class="main-footer__nav-link"><a href="../book">Request Appoinment</a></div>
+                                            <div class="main-footer__nav-link"><a href="../book">Request Appointment</a></div>
                                             <div class="main-footer__nav-link"><a href="../feedback">Submit Feedback</a></div>
                                             <div class="main-footer__nav-link"><a href="tel:1800880770">1800 880 770</a></div>
                                         </div>
