--- a/main/locations/mponds.html
+++ b/main/locations/mponds.html
@@ -437,7 +437,7 @@
                     <li class="menu-item dtmenuitem">
                         <a href="../locations/" class="dtmenuheader">Locations</a>
                         <ol class="sub-menu">
-                            <li class="menu-item"><a href="nmelb">North Melbourne</a></li>
+                            <li class="menu-item"><a href="epworth">Epworth Richmond</a></li>
                             <li class="menu-item"><a href="mponds">Moonee Ponds</a></li>
                         </ol>
                     </li>
@@ -551,13 +551,13 @@
                                         </div>
                                         <div class="main-footer__nav-item">
                                             <h5 class="main-footer__nav-header">Locations</h5>
-                                            <div class="main-footer__nav-link"><a href="nmelb">North Melbourne</a></div>
+                                            <div class="main-footer__nav-link"><a href="epworth">Epworth Richmond</a></div>
                                             <div class="main-footer__nav-link"><a href="mponds">Moonee Ponds</a></div>
                                         </div>
                                         <div class="main-footer__nav-item">
                                             <h5 class="main-footer__nav-header">Contact</h5>
                                             <div class="main-footer__nav-link"><a href="../contact">General Enquiries</a></div>
-                                            <div class="main-footer__nav-link"><a href="../book">Request Appoinment</a></div>
+                                            <div class="main-footer__nav-link"><a href="../book">Request Appointment</a></div>
                                             <div class="main-footer__nav-link"><a href="../feedback">Submit Feedback</a></div>
                                             <div class="main-footer__nav-link"><a href="tel:1800880770">1800 880 770</a></div>
                                         </div>
