--- a/main/services/index.html
+++ b/main/services/index.html
@@ -438,7 +438,7 @@
                     <li class="menu-item dtmenuitem">
                         <a href="../locations/" class="dtmenuheader ">Locations</a>
                         <ol class="sub-menu">
-                            <li class="menu-item "><a href="../locations/nmelb">North Melbourne</a></li>
+                            <li class="menu-item "><a href="../locations/epworth">Epworth Richmond</a></li>
                             <li class="menu-item "><a href="../locations/mponds">Moonee Ponds</a></li>
                         </ol>
                     </li>
@@ -500,12 +500,13 @@
                 <div class="col-10 py-3 text3 container container--adaptive">
                     <div class="" style="text-align: center">
                         <div id="button1">
+                            <a class="mybtn link text3" href="#"><span>Consultation</span></a>
+                        </div>
+                        <div id="button1">
                             <a class="mybtn link text3" href="echo"><span>Echocardiography</span></a>
-                            <!--<a class="mybtn1 mybtn1--gradient link text3" href="book"><span>Book an Appointment</span></a>-->
                         </div>
                         <div id="button1">
                             <a class="mybtn link text3" href="stressecho"><span>Stress Echocardiography</span></a>
-                            <!--<a class="mybtn1 mybtn1--gradient link text3" href="book"><span>Book an Appointment</span></a>-->
                         </div>
                         <div id="button1" class="mb-5">
                             <a class="mybtn link text3" href="holter"><span>Holter Monitoring</span></a>
@@ -542,13 +543,13 @@
                                         </div>
                                         <div class="main-footer__nav-item">
                                             <h5 class="main-footer__nav-header">Locations</h5>
-                                            <div class="main-footer__nav-link"><a href="../locations/nmelb">North Melbourne</a></div>
+                                            <div class="main-footer__nav-link"><a href="../locations/epworth">Epworth Richmond</a></div>
                                             <div class="main-footer__nav-link"><a href="../locations/mponds">Moonee Ponds</a></div>
                                         </div>
                                         <div class="main-footer__nav-item">
                                             <h5 class="main-footer__nav-header">Contact</h5>
                                             <div class="main-footer__nav-link"><a href="../contact">General Enquiries</a></div>
-                                            <div class="main-footer__nav-link"><a href="../book">Request Appoinment</a></div>
+                                            <div class="main-footer__nav-link"><a href="../book">Request Appointment</a></div>
                                             <div class="main-footer__nav-link"><a href="../feedback">Submit Feedback</a></div>
                                             <div class="main-footer__nav-link"><a href="tel:1800880770">1800 880 770</a></div>
                                         </div>
