--- a/main/404.html
+++ b/main/404.html
@@ -421,10 +421,8 @@
                     <li class="menu-item dtmenuitem">
                         <a href="locations/" class="dtmenuheader">Locations</a>
                         <ol class="sub-menu">
-                            <li class="menu-item"><a href="locations/nmelb">North Melbourne</a></li>
                             <li class="menu-item"><a href="locations/epworth">Epworth Richmond</a></li>
                             <li class="menu-item"><a href="locations/mponds">Moonee Ponds</a></li>
-                            <li class="menu-item"><a href="locations/blackburnsouth">Blackburn South</a></li>
                         </ol>
                     </li>
                     <li class="menu-item dtmenuitem">
@@ -524,15 +522,13 @@
                                         </div>
                                         <div class="main-footer__nav-item">
                                             <h5 class="main-footer__nav-header">Locations</h5>
-                                            <div class="main-footer__nav-link"><a href="locations/nmelb">North Melbourne</a></div>
                                             <div class="main-footer__nav-link"><a href="locations/epworth">Epworth Richmond</a></div>
                                             <div class="main-footer__nav-link"><a href="locations/mponds">Moonee Ponds</a></div>
-                                             <div class="main-footer__nav-link"><a href="locations/blackburnsouth">Blackburn South</a></div>
                                         </div>
                                         <div class="main-footer__nav-item">
                                             <h5 class="main-footer__nav-header">Contact</h5>
                                             <div class="main-footer__nav-link"><a href="contact">General Enquiries</a></div>
-                                            <div class="main-footer__nav-link"><a href="book">Request Appoinment</a></div>
+                                            <div class="main-footer__nav-link"><a href="book">Request Appointment</a></div>
                                             <div class="main-footer__nav-link"><a href="feedback">Submit Feedback</a></div>
                                             <div class="main-footer__nav-link"><a href="tel:1800880770">1800 880 770</a></div>
                                         </div>
