--- a/main/index.html
+++ b/main/index.html
@@ -397,7 +397,7 @@
                     <li class="menu-item dtmenuitem">
                         <a href="locations/" class="dtmenuheader">Locations</a>
                         <ol class="sub-menu">
-                            <li class="menu-item"><a href="locations/nmelb">North Melbourne</a></li>
+                            <li class="menu-item"><a href="locations/epworth">Epworth Richmond</a></li>
                             <li class="menu-item"><a href="locations/mponds">Moonee Ponds</a></li>
                         </ol>
                     </li>
@@ -530,7 +530,7 @@
                             <div class="text-component text">
                                 <small class="feature__label margin-bottom--xs">Our Locations</small>
                                 <h2 class="text" data-splitting>Where We Are.</h2>
-                                <p class="textp">We currently deliver our services across 2 locations in Melbourne: <a href="locations/nmelb" class="textlink">North Melbourne</a> and <a href="locations/mponds" class="textlink">Moonee Ponds</a>.</p>
+                                <p class="textp">We currently deliver our services across 2 locations in Melbourne: <a href="locations/epworth" class="textlink">Epworth Richmond</a> and <a href="locations/mponds" class="textlink">Moonee Ponds</a>.</p>
                             </div>
 
                             <div class="margin-top--sm">
@@ -576,13 +576,13 @@
                                 </div>
                                 <div class="main-footer__nav-item">
                                     <h5 class="main-footer__nav-header" data-splitting>Locations</h5>
-                                    <div class="main-footer__nav-link"><a href="locations/nmelb">North Melbourne</a></div>
+                                    <div class="main-footer__nav-link"><a href="locations/epworth">Epworth Richmond</a></div>
                                     <div class="main-footer__nav-link"><a href="locations/mponds">Moonee Ponds</a></div>
                                 </div>
                                 <div class="main-footer__nav-item">
                                     <h5 class="main-footer__nav-header" data-splitting>Contact</h5>
                                     <div class="main-footer__nav-link"><a href="contact">General Enquiries</a></div>
-                                    <div class="main-footer__nav-link"><a href="book">Request Appoinment</a></div>
+                                    <div class="main-footer__nav-link"><a href="book">Request Appointment</a></div>
                                     <div class="main-footer__nav-link"><a href="feedback">Submit Feedback</a></div>
                                     <div class="main-footer__nav-link"><a href="tel:1800880770">1800 880 770</a></div>
                                 </div>
