--- a/main/index.html
+++ b/main/index.html
@@ -453,11 +453,11 @@
                     <br>
                     <br>
                     <h5 class="text1 ml12">Excellence. Integrity. Quality.</h5>
-                    <div id="button1">
+                    <div class="button1">
                         <a class="mybtn link text3" href="refer"><span>Refer a Patient</span></a>
                         <!--<a class="mybtn1 mybtn1--gradient link text3" href="book"><span>Book an Appointment</span></a>-->
                     </div>
-                    <div id="button1">
+                    <div class="button1">
                         <a class="mybtn link text3" style="margin-top: 1em !important" href="tel:1800880770"><span>1800 880 770</span></a>
                         <!--<a class="mybtn1 mybtn1--gradient link text3" href="book"><span>Book an Appointment</span></a>-->
                     </div>
