--- a/main/index.html
+++ b/main/index.html
@@ -257,7 +257,7 @@
     </script>
     <noscript>
         <div style="display:none;">
-            <img src="//pixel.quantserve.com/pixel/p-1g91qYrX5-hfd.gif" border="0" height="1" width="1" alt="Quantcast" />
+            <img src="//pixel.quantserve.com/pixel/p-1g91qYrX5-hfd.gif" height="1" width="1" alt="Quantcast" />
         </div>
     </noscript>
     <!-- End Quantcast tag -->
