--- a/main/index.html
+++ b/main/index.html
@@ -360,7 +360,7 @@
     <!--     onmousedown='return false;' onselectstart='return false;'    -->
     <!-- Google Tag Manager (noscript) -->
     <noscript>
-        <iframe src="https://www.googletagmanager.com/ns.html?id=GTM-MQXNP5K" height="0" width="0" style="display:none;visibility:hidden"></iframe>
+        <iframe src="https://www.googletagmanager.com/ns.html?id=GTM-MQXNP5K" height="0" width="0" title="gtag" style="display:none;visibility:hidden"></iframe>
     </noscript>
     <!-- End Google Tag Manager (noscript) -->
     <div id="loading" class="">
